Fix wrap overflow text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ section {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    word-break: break-word;
     font-family: 'Jost','Helvetica','Helvetica Neue','Segoe UI','Helvetica', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 *:focus{
